--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,7 @@
                 <div class="filter js-filter" id="js-filterer" onclick="projectFilterHandler('js')">JavaScript</div>
                 <div class="filter cpp-filter" id="cpp-filterer" onclick="projectFilterHandler('cpp')">C++</div>
                 <div class="filter python-filter" id="python-filterer" onclick="projectFilterHandler('python')">Python</div>
+                <div class="filter java-filter" id="java-filterer" onclick="projectFilterHandler('java')">Java</div>
             </div>
         </section>
         <section id="projects-ordering">Sort
@@ -49,6 +50,40 @@
         </section>
     </div>
     <section class="project-list-latest" id="project-list">
+        <div class="scroll-hidden project minor-project team-project java" id="minor-project-3">
+            <div class="minor-project-headings" id="minor-project-headings-3">
+                <h4 class="minor-project-title" id="minor-project-title-3">"Rogue-like" Console Game</h4>
+                <div class="minor-project-subtitle" id="minor-project-subtitle-3">Team, Monash, April-May 2023</div>
+                <div class="project-filters" id="project-filters-6">Categories:
+                    <div class="project-filter java-filter">Java</div>
+                </div>
+            </div>
+            <li class="minor-project-explanation">Learnt a provided game engine and implemented new features using extensible code</li>
+            <li class="minor-project-explanation">Focused on the importance of OOP, emphasising SOLID principles and clearly displaying code through UML class and sequence diagrams</li>
+        </div>
+        <div class="scroll-hidden project minor-project individual-project python" id="minor-project-2">
+            <div class="minor-project-headings" id="minor-project-headings-2">
+                <h4 class="minor-project-title" id="minor-project-title-2">Trail Organiser</h4>
+                <div class="minor-project-subtitle" id="minor-project-subtitle-2">Team, Monash, April-May 2023</div>
+                <div class="project-filters" id="project-filters-5">Categories:
+                    <div class="project-filter python-filter">Python</div>
+                </div>
+            </div>
+            <li class="minor-project-explanation">Extended upon a "Trail Organiser" application using further ADTs and applied techniques such as recursion</li>
+            <li class="minor-project-explanation">Maintained clear consistent communication with teammate at all times, and delivered upon self-imposed deadlines</li>
+            <li class="minor-project-explanation">Performed complexity analysis on all added code</li>
+        </div>
+        <div class="scroll-hidden project minor-project individual-project python" id="minor-project-1">
+            <div class="minor-project-headings" id="minor-project-headings-1">
+                <h4 class="minor-project-title" id="minor-project-title-1">Paint Application</h4>
+                <div class="minor-project-subtitle" id="minor-project-subtitle-1">Individual, Monash, March 2023</div>
+                <div class="project-filters" id="project-filters-4">Categories:
+                    <div class="project-filter python-filter">Python</div>
+                </div>
+            </div>
+            <li class="minor-project-explanation">Extended upon a given paint application using ADTs</li>
+            <li class="minor-project-explanation">Performed complexity analysis and completed clear documentation on all added code</li>
+        </div>
         <div class="scroll-hidden project team-project python" id="project-3">
             <div class="project-image-container" id="project-image-container-3">
                 <img class="project-image" id="project-image-3" src="" alt="Currently in development">
@@ -75,14 +110,14 @@
             </div>
             <div class="project-text" id="project-text-2">Individual
                 <div class="project-title-and-link" id="project-title-and-link-1">
-                    <h3 class="project-title" id="project-title-2">Car Game</h3>
+                    <h3 class="project-title" id="project-title-2">Flappy Bird Game</h3>
                 </div>
                 <div class="project-subtitle" id="project-subtitle-2">January 2023 - Present</div>
                 <div class="project-filters" id="project-filters-2">Categories:
                     <div class="project-filter cpp-filter">C++</div>
                 </div>
                 <li class="project-explanation">Made using SFML, aiming to be a simplistic, arcade-style game</li>
-                <li class="project-explanation">Currently unavailable publicly, and car functionality is being created</li>
+                <li class="project-explanation">Bird physics are currently under development</li>
             </div>
         </div>
         <div class="scroll-hidden project individual-project html css js" id="project-1">
