--- a/resume.html
+++ b/resume.html
@@ -30,9 +30,10 @@
             <div id="filter-list">
                 <div class="filter software-filter" id="software-filterer" onclick="resumeFilterHandler('software')">Software</div>
                 <div class="filter education-filter" id="education-filterer" onclick="resumeFilterHandler('education')">Education</div>
+                <div class="filter teamwork-filter" id="teamwork-filterer" onclick="resumeFilterHandler('teamwork')">Teamwork</div>
                 <div class="filter hospitality-filter" id="hospitality-filterer" onclick="resumeFilterHandler('hospitality')">Hospitality</div>
                 <div class="filter community-filter" id="community-filterer" onclick="resumeFilterHandler('community')">Community</div>
-                <div class="filter teamwork-filter" id="teamwork-filterer" onclick="resumeFilterHandler('teamwork')">Teamwork</div>
+                <div class="filter customer-service-filter" id="customer-service-filterer" onclick="resumeFilterHandler('customer-service')">Customer Service</div>
             </div>
         </section>
         <section id="resume-ordering">Sort
@@ -47,6 +48,36 @@
         </section>
     </div>
     <section class="experience-list-latest" id="experience-list">
+        <div class="scroll-hidden experience major-experience customer-service teamwork" id="experience-6">
+            <div class="experience-image-container">
+                <img class="experience-image" id="experience-image-6" src="/images/Coles-storefront.jpg" alt="Coles Storefront">
+            </div>
+            <div class="experience-text" id="experience-text-6">
+                <h3 class="experience-title" id="experience-title-6">Coles - Dairy Team Member</h3>
+                <div class="experience-subtitle" id="experience-subtitle-6">North Brighton, March 2023 - Present</div>
+                <div class="experience-filters" id="experience-filters-6">Categories:
+                    <div class="experience-filter customer-service-filter">Customer Service</div>
+                    <div class="experience-filter teamwork-filter">Teamwork</div>
+                </div>
+                <li class="experience-explanation">Acting as a Night Fill team member, practicing FIFO efficiently</li>
+                <li class="experience-explanation">Learnt all customer service and POS skills required to work at a checkout</li>
+            </div>
+        </div>
+        <div class="scroll-hidden experience major-experience customer-service community" id="experience-5">
+            <div class="experience-image-container">
+                <img class="experience-image" id="experience-image-5" src="/images/EzyMath-tutoring-logo.png" alt="Logo of EzyMath Tutoring">
+            </div>
+            <div class="experience-text" id="experience-text-5">
+                <h3 class="experience-title" id="experience-title-5">EzyMath Tutoring - VCE Tutor</h3>
+                <div class="experience-subtitle" id="experience-subtitle-5">Private Tutoring, 2022 - Present</div>
+                <div class="experience-filters" id="experience-filters-5">Categories:
+                    <div class="experience-filter customer-service-filter">Customer Service</div>
+                    <div class="experience-filter community-filter">Community</div>
+                </div>
+                <li class="experience-explanation">Interacting with clients and students, ensuring clear communication and feedback for clients through detailed reporting systems</li>
+                <li class="experience-explanation">Supporting students by creating revision material, explaining new concepts in simple yet detailed ways</li>
+            </div>
+        </div>
         <div class="scroll-hidden experience major-experience software education teamwork" id="experience-3">
             <div class="experience-image-container">
                 <img class="experience-image" id="experience-image-3" src="/images/Monash-logo.svg" alt="Logo of Monash University">
