Added Calvino Coffee experience and updated website details (removing patch notes)

--- a/resume.html
+++ b/resume.html
@@ -48,6 +48,22 @@
         </section>
     </div>
     <section class="experience-list-latest" id="experience-list">
+        <div class="scroll-hidden experience major-experience customer-service teamwork hospitality" id="experience-7">
+            <div class="experience-image-container">
+                <img class="experience-image" id="experience-image-7" src="/images/Calvino-coffee.jpg" alt="Calvino Coffee Storefront">
+            </div>
+            <div class="experience-text" id="experience-text-7">
+                <h3 class="experience-title" id="experience-title-7">Calvino Coffee - Barista</h3>
+                <div class="experience-subtitle" id="experience-subtitle-7">Moorabbin, July 2023 - Present</div>
+                <div class="experience-filters" id="experience-filters-7">Categories:
+                    <div class="experience-filter customer-service-filter">Customer Service</div>
+                    <div class="experience-filter teamwork-filter">Teamwork</div>
+                    <div class="experience-filter hospitality-filter">Hospitality</div>
+                </div>
+                <li class="experience-explanation">Acting as a Night Fill team member, practicing FIFO efficiently</li>
+                <li class="experience-explanation">Learnt all customer service and POS skills required to work at a checkout</li>
+            </div>
+        </div>
         <div class="scroll-hidden experience major-experience customer-service teamwork" id="experience-6">
             <div class="experience-image-container">
                 <img class="experience-image" id="experience-image-6" src="/images/Coles-storefront.jpg" alt="Coles Storefront">
@@ -173,7 +189,7 @@
     <footer id="resume-footer">
         <a class="contact-button" href="profile.html">Contact Me</a>
         <img id="footer-logo" src="/images/footer-logo.svg"></img>
-        <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
+        <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2023</div>
     </footer>
 </body>
 </html>
