--- a/profile.html
+++ b/profile.html
@@ -43,7 +43,7 @@
             <section id="contact-details">Contact me
                 <div class="contact-option" id="contact-option-1">
                     <img class="contact-option-logo" id="contact-option-logo-1" src="/images/LinkedIn-logo.svg" alt="LinkedIn Logo">
-                    <a class="contact-option-link" id="contact-option-link-1">Coming Soon</a>
+                    <a href="https://www.linkedin.com/in/connor-macdougall-08b232283/" class="contact-option-link" id="contact-option-link-1">Connor Macdougall</a>
                 </div>
                 <div class="contact-option" id="contact-option-2">
                     <img class="contact-option-logo" id="contact-option-logo-2" src="/images/email-logo.png" alt="Email Logo">
@@ -58,7 +58,6 @@
     </section>
     <section id="about-website">
         About this website
-        <p class="website-details">Access the official <a id="update-log-link" href="update-log.md" target="_blank">update log</a></p>
         <p class="website-details">First available online: 30/12/2022</p>
         <p class="website-details">This website was my first project, and is being continuously updated and improved. This website is hosted through a GitHub public repository and is designed to work both on mobile phones and larger screens.</p>
         <p class="website-details">Image information:
@@ -69,7 +68,7 @@
     <footer>
         <a href="#contact-details" class="contact-button" title="See the blue box on this page">Contact Me</a>
         <img id="footer-logo" src="/images/footer-logo.svg"></img>
-        <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
+        <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2023</div>
     </footer>
 </body>
 </html>
