Added new experience (Monash Nova Rover)

--- a/resume.html
+++ b/resume.html
@@ -48,20 +48,36 @@
         </section>
     </div>
     <section class="experience-list-latest" id="experience-list">
+        <div class="scroll-hidden experience major-experience software education community teamwork" id="experience-8">
+            <div class="experience-image-container">
+                <img class="experience-image" id="experience-image-8" src="/images/Monash-nova-rover-logo.png" alt="Monash Nova Rover Logo">
+            </div>
+            <div class="experience-text" id="experience-text-8">
+                <h3 class="experience-title" id="experience-title-8">Monash Nova Rover - Software Engineer</h3>
+                <div class="experience-subtitle" id="experience-subtitle-7">Clayton, September 2023 - Present</div>
+                <div class="experience-filters" id="experience-filters-7">Categories:
+                    <div class="experience-filter software-filter">Software</div>
+                    <div class="experience-filter education-filter">Education</div>
+                    <div class="experience-filter teamwork-filter">Teamwork</div>
+                    <div class="experience-filter community-filter">Community</div>
+                </div>
+                <li class="experience-explanation">Adapted to new codebase (consisting of React, JavaScript, Flask, Python, C++ and ROS2) quickly</li>
+                <li class="experience-explanation">Partcipated in community outreach events to help promote Monash Nova Rover values (equality and future generations in STEM, while leading student representation within the Australian space sector)</li>
+            </div>
+        </div>
         <div class="scroll-hidden experience major-experience customer-service teamwork hospitality" id="experience-7">
             <div class="experience-image-container">
                 <img class="experience-image" id="experience-image-7" src="/images/Calvino-coffee.jpg" alt="Calvino Coffee Storefront">
             </div>
             <div class="experience-text" id="experience-text-7">
                 <h3 class="experience-title" id="experience-title-7">Calvino Coffee - Barista</h3>
-                <div class="experience-subtitle" id="experience-subtitle-7">Moorabbin, July 2023 - Present</div>
+                <div class="experience-subtitle" id="experience-subtitle-7">Moorabbin, July 2023 - October 2023</div>
                 <div class="experience-filters" id="experience-filters-7">Categories:
                     <div class="experience-filter customer-service-filter">Customer Service</div>
                     <div class="experience-filter teamwork-filter">Teamwork</div>
                     <div class="experience-filter hospitality-filter">Hospitality</div>
                 </div>
-                <li class="experience-explanation">Acting as a Night Fill team member, practicing FIFO efficiently</li>
-                <li class="experience-explanation">Learnt all customer service and POS skills required to work at a checkout</li>
+                <li class="experience-explanation">Practiced customer service and POS skills</li>
             </div>
         </div>
         <div class="scroll-hidden experience major-experience customer-service teamwork" id="experience-6">
