Updated profile age and bio

--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,7 @@
             </div>
             <div class="about-me-sub-section" id="about-me-text">
                 <section id="details">
-                    <p class="profile-details" id="profile-name-and-age">Connor Macdougall <span id="profile-age">19</span></p>
+                    <p class="profile-details" id="profile-name-and-age">Connor Macdougall <span id="profile-age">20</span></p>
                     <p class="profile-details" id="profile-career">Upcoming Software Engineer</p>
                     <div class="profile-details" id="profile-buzzwords-container">
                         <p class="profile-buzzwords">Organised</p>
@@ -37,8 +37,11 @@
                         <p class="profile-buzzwords">Adaptable</p>
                     </div>
                 </section>
-                <p id="profile-bio">I am a university student, eager to learn and always ready to expand upon my previous experiences to build new and improve old skills. 
-                    I love taking opportunities to improve my experience in the field.</p>
+                <p id="profile-bio">As an aspiring software engineer, I am ready to use my coding and problem solving skills to better lives. With an
+                    extensive background in teamwork and environments where I must meet challenges head-on, both professionally
+                    and academically, I am adaptable and have learnt to be an empathetic leader and open-minded collaborator.
+                    Through my passion for technology and its future, I eagerly look forward to every challenge and the new
+                    perspectives that I may get to learn to solve them.</p>
             </div>
             <section id="contact-details">Contact me
                 <div class="contact-option" id="contact-option-1">
