--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <section id="welcome">
         <h1 id="welcome-header">Welcome!</h1>
-        <p class="introduction-text" id="welcome-introduction-text">Welcome to my website, my first software project which is also a compilation of all my other experiences. 
+        <p class="introduction-text" id="welcome-introduction-text">Welcome to my website, my first software project which is also a regularly maintained compilation of all my other experiences and projects. 
             Beginning in the summer of '22-'23, this website was my start to coding after I was introduced to it in ENG1013, a first year engineering unit at Monash University. </p>
     </section>
     <h2 id="slideshow-title"><a href="projects.html">Projects</a> and <a href="resume.html">Experiences</a></h2>
@@ -38,20 +38,20 @@
                 <p class="slideshow-caption" id="slideshow-caption-2">My first solo software project; this website!</p>
             </div>
             <div class="slideshow-display-container slideshow-hidden" id="slideshow-display-container-3" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-3"  src="/images/Mck-sec-col.jpg" alt="The front of Mckinnon Secondary College seen from the roadside">
-                <p class="slideshow-caption" id="slideshow-caption-3">McKinnon Secondary College; the secondary school I completed VCE</p> 
+                <img class="slideshow-image" id="slideshow-image-3"  src="/images/Monash-nova-rover-logo.png" alt="Monash Nova Rover Logo">
+                <p class="slideshow-caption" id="slideshow-caption-3">Monash Nova Rover; the student engineering team I became a part of in 2023</p> 
             </div>            
             <div class="slideshow-display-container slideshow-far-left" id="slideshow-display-container-4" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-4"  src="/images/McDonalds-logo.jpg" alt="The life-size Mcdonald's Logo present outside most McDonald's restaurants">
-                <p class="slideshow-caption" id="slideshow-caption-4">I worked as a team member at McDonalds as my first job</p>
+                <img class="slideshow-image" id="slideshow-image-4"  src="/images/Coles-storefront.jpg" alt="A Coles storefront inside a shopping centre">
+                <p class="slideshow-caption" id="slideshow-caption-4">I worked as a team member at Coles to build my professional skills</p>
             </div>
             <div class="slideshow-display-container slideshow-left" id="slideshow-display-container-5" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-5"  src="/images/RSA-training-logo.png" alt="Logo of RSA Nationally Recognised Training">
-                <p class="slideshow-caption" id="slideshow-caption-5">I obtained my RSA certificate in January 2023</p>
+                <img class="slideshow-image" id="slideshow-image-5"  src="/images/GitHub-logo.png" alt="GitHub Logo">
+                <p class="slideshow-caption" id="slideshow-caption-5">You can visit my GitHub page and more through the profile page!</p>
             </div>
             <div class="slideshow-display-container slideshow-centre" id="slideshow-display-container-6" onclick="slideshowHandler(this.id)">
                 <img class="slideshow-image" id="slideshow-image-6"  src="/images/Monash-logo.svg" alt="Monash University Logo">
-                <p class="slideshow-caption" id="slideshow-caption-6">Monash University; the university I am completing my degree at</p> 
+                <p class="slideshow-caption" id="slideshow-caption-6">Monash University; the university where I am completing my Bachelors of Software Engineering (Honours)</p> 
             </div>
         <nav class="slideshow-navbar">
             <div class="slideshow-locator active-slideshow-locator" id="slideshow-locator-1" onclick="slideshowHandler(this.id)"></div>
